structured objects in js files

--- a/styles.css
+++ b/styles.css
@@ -21,3 +21,17 @@ label {
 	font-family: Helvetica;
 	font-size: 1.25em;
 }
+
+button, .window {
+	border: solid 0.75em tomato;
+	background: honeydew;
+	border-radius: 10%;
+	align-content: center;
+}
+
+button {
+	font-size: 1.25em;
+	width: 223px;
+	height: 75px;
+	
+}
